--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3 class="text-warning" style="letter_spacing : 2px">Search Results - {{keyword}}</h3>
+<h3 class="text-uppercase text-warning" style="letter_spacing : 2px">Search Results - {{keyword}}</h3>
 
 <div class="row mb-2">
     {% if blogs %}
